--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-flip": "^0.2.2",
-    "react-native-reanimated": "^2.4.1",
-    "react-native-web": "0.17.1"
+    "react-native-card-flip": "^1.0.7",
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
