changed app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "tiles_flip",
+    "name": "Tilerr",
     "slug": "tiles_flip",
     "version": "1.0.0",
     "orientation": "portrait",
